@@ -4,6 +4,7 @@ import static org.testng.internal.Utils.isStringNotEmpty;
 
 import com.google.inject.Injector;
 import com.google.inject.Module;
+import java.util.Collections;
 import org.testng.GuiceHelper;
 import org.testng.IClass;
 import org.testng.IInjectorFactory;
@@ -15,10 +16,14 @@ import org.testng.annotations.ITestAnnotation;
 import org.testng.collections.Lists;
 import org.testng.collections.Objects;
 import org.testng.internal.annotations.IAnnotationFinder;
+import org.testng.internal.objects.Dispenser;
+import org.testng.internal.objects.IObjectDispenser;
+import org.testng.internal.objects.pojo.CreationAttributes;
+import org.testng.internal.objects.pojo.DetailedAttributes;
+import org.testng.internal.objects.pojo.BasicAttributes;
 import org.testng.xml.XmlClass;
 import org.testng.xml.XmlTest;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -100,20 +105,11 @@ public class ClassImpl implements IClass {
       if (m_instance != null) {
         m_defaultInstance = m_instance;
       } else {
-        Object instance = getInstanceFromGuice();
-
-        if (instance != null) {
-          m_defaultInstance = instance;
-        } else {
-          m_defaultInstance =
-              InstanceCreator.createInstance(
-                  m_class,
-                  m_classes,
-                  m_testContext.getCurrentXmlTest(),
-                  m_annotationFinder,
-                  m_objectFactory,
-                  create, errMsgPrefix);
-        }
+        IObjectDispenser dispenser = Dispenser.newInstance();
+        BasicAttributes basic = new BasicAttributes(this, null);
+        DetailedAttributes detailed = newDetailedAttributes(create, errMsgPrefix);
+        CreationAttributes attributes = new CreationAttributes(m_testContext,basic, detailed);
+        m_defaultInstance = dispenser.dispense(attributes);
       }
     }
 
@@ -127,6 +123,10 @@ public class ClassImpl implements IClass {
     return injector.getInstance(m_class);
   }
 
+  /**
+   * @deprecated - This method stands deprecated as of TestNG <code>7.3.0</code>
+   */
+  @Deprecated
   public Injector getParentInjector(IInjectorFactory injectorFactory) {
     ISuite suite = m_testContext.getSuite();
     // Reuse the previous parent injector, if any
@@ -151,15 +151,11 @@ public class ClassImpl implements IClass {
 
     if (m_testContext.getCurrentXmlTest().isJUnit()) {
       if (create) {
+        DetailedAttributes ea = newDetailedAttributes(create, errorMsgPrefix);
+        CreationAttributes attributes = new CreationAttributes(m_testContext, null, ea);
         result =
             new Object[] {
-                InstanceCreator.createInstance(
-                    m_class,
-                    m_classes,
-                    m_testContext.getCurrentXmlTest(),
-                    m_annotationFinder,
-                    m_objectFactory,
-                    create, errorMsgPrefix)
+                Dispenser.newInstance().dispense(attributes)
             };
       }
     }
@@ -192,5 +188,17 @@ public class ClassImpl implements IClass {
 
   private static int computeHashCode(Object instance) {
     return IParameterInfo.embeddedInstance(instance).hashCode();
+  }
+
+  private DetailedAttributes newDetailedAttributes(boolean create, String errMsgPrefix) {
+    DetailedAttributes ea = new DetailedAttributes();
+    ea.setXmlTest(m_testContext.getCurrentXmlTest());
+    ea.setClasses(m_classes);
+    ea.setFinder(m_annotationFinder);
+    ea.setDeclaringClass(m_class);
+    ea.setFactory(m_objectFactory);
+    ea.setErrorMsgPrefix(errMsgPrefix);
+    ea.setCreate(create);
+    return ea;
   }
 }
